--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
 <body bgcolor=#A020F0>
 <p>Instructions: Click your option, then click submit. After you get the alert and the opponent's hand is shown, click Next Round. This game is out of 3.</p>
 <b id="bold">Score:</b><br>
+<b id="Rounds">Round Number: 1</b><br>
 <b id="bold2">Status: Undecided</b><br>
 <canvas id="RPS" width="700" height="400" style="border:1px solid #c3c3c3";></canvas>
 <script>
 var CanAlert = 0
 var score1 = 0;
 var score2 = 0;
-var rounds = 0;
+var rounds = 1;
 var Player1Hand = "";
 var Player2Hand = "";
+var round_number = 1
 var canvas = document.getElementById("RPS");
 var ctx = canvas.getContext("2d");
 ctx.beginPath();
@@ -156,6 +158,7 @@ alert("All 3 Rounds are finished. Check your status to see if you won!");
 }
 }
 function nextRound(){
+document.getElementById("Rounds").innerHTML=rounds
 ctx.beginPath();
 ctx.rect(0, 0, 700, 400);
 ctx.fillStyle = "#FFFFFF";
