--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ alert("All 3 Rounds are finished. Check your status to see if you won!");
 }
 }
 function nextRound(){
-document.getElementById("Rounds").innerHTML=rounds
+document.getElementById("Rounds").innerHTML="Round Number: " + rounds
 ctx.beginPath();
 ctx.rect(0, 0, 700, 400);
 ctx.fillStyle = "#FFFFFF";
