--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <b id="bold2">Status: Undecided</b><br>
 <canvas id="RPS" width="700" height="400" style="border:1px solid #c3c3c3";></canvas>
 <script>
+var CanContinue = 0
 var CanAlert = 0
 var score1 = 0;
 var score2 = 0;
@@ -52,6 +53,7 @@ ctx.stroke();
 Player1Hand = "Paper";
 }
 function Computer(){
+CanContinue = 1
 var decider = Math.random();
 if(decider < 0.3 & decider > 0){
 ctx.beginPath()
@@ -158,12 +160,14 @@ alert("All 3 Rounds are finished. Check your status to see if you won!");
 }
 }
 function nextRound(){
+if(CanContinue != 0){
 document.getElementById("Rounds").innerHTML="Round Number: " + rounds
 ctx.beginPath();
 ctx.rect(0, 0, 700, 400);
 ctx.fillStyle = "#FFFFFF";
 ctx.fill();
 ctx.stroke();
+}
 }
 </script>
 <br><button onclick="Player1Rock()">Rock!</button>
