--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ document.getElementById("bold2").innerHTML = "Status: Lost"
 else if(score1 == score2){
 document.getElementById("bold2").innerHTML = "Status: Tie"
 }
-alert("All 3 Rounds are finished. Check your status to see if you won!");
+alert("All Rounds are finished. Check your status to see if you won!");
 }
 }
 function nextRound(){
