--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <b id="Rounds">Round Number: 1</b><br>
 <b id="bold2">Status: Undecided</b><br>
 <canvas id="RPS" width="700" height="400" style="border:1px solid #c3c3c3";></canvas>
+<style>
+  button:hover{
+  color:blue;
+  }
+  button{
+  color:black;
+  }
+</style>
 <script>
 var CanContinue = 0
 var CanAlert = 0
