--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ ctx.stroke();
 Player1Hand = "Paper";
 }
 function Computer(){
+CanContinue = 1
 var decider = Math.random();
 if(decider < 0.3 & decider > 0){
 ctx.beginPath();
