--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@ alert("You are tied this round.");
 CanAlert -= 1
 }
 }
-if(rounds >= 3){
 if(score1 >= 2){
 document.getElementById("bold2").innerHTML = "Status: Won!"
+alert("All rounds are finished. Check your status to see if you won!");
 }
 else if(score2 >= 2){
 document.getElementById("bold2").innerHTML = "Status: Lost"
+alert("All rounds are finished. Check your status to see if you won!");
 }
 else if(score1 == score2){
 document.getElementById("bold2").innerHTML = "Status: Tie"
-CanContinue = 1
-}
 alert("All rounds are finished. Check your status to see if you won!");
+}
 }
 }
 function nextRound(){
