--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Rock, Paper, Scissors!</title>
 <h2>Rock, Paper, Scissors</h2>
 <body bgcolor=#A020F0>
-<p>Instructions: Click your option, then click submit. After you get the alert and the opponent's hand is shown, click Next Round. This game is out of 3.</p>
+<p>Instructions: Click your option, then click submit. After you get the alert and the opponent's hand is shown, click Next Round. This game is best out of 3.</p>
 <b id="bold">Score:</b><br>
 <b id="Rounds">Round Number: 1</b><br>
 <b id="bold2">Status: Undecided</b><br>
