--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ else if(score2 >= 2){
 document.getElementById("bold2").innerHTML = "Status: Lost"
 alert("All rounds are finished. Check your status to see if you won!");
 }
-else if(score1 == score2){
+else if(score1 == score2 && rounds >= 3){
 document.getElementById("bold2").innerHTML = "Status: Tie"
 alert("All rounds are finished. Check your status to see if you won!");
 }
