--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body bgcolor=#A020F0>
 <p>Instructions: Click your option, then click submit. After you get the alert and the opponent's hand is shown, click Next Round. This game is best out of 3. Ties give no points.</p>
 <b id="bold">Score:</b><br>
-<b id="enemyscore">Enemy Score: </b>
+<b id="enemyscore">Enemy Score: </b><br>
 <b id="Rounds">Round Number: 1</b><br>
 <b id="bold2">Status: Undecided</b><br>
 <canvas id="RPS" width="700" height="400" style="border:1px solid #c3c3c3";></canvas>
