--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@ CanAlert -= 1
 }
 if(score1 >= 2){
 document.getElementById("bold2").innerHTML = "Status: Won!"
-alert("All rounds are finished. Check your status to see if you won!");
+alert("All rounds are finished. You have Won!");
 }
 else if(score2 >= 2){
 document.getElementById("bold2").innerHTML = "Status: Lost"
-alert("All rounds are finished. Check your status to see if you won!");
+alert("All rounds are finished. You have lost.");
 }
 }
 function nextRound(){
